kajit/tests/snapshots/corpus__generated_rvsdg_postcard_nested_struct_x86_64.snap
---
source: kajit/tests/corpus.rs
expression: ir_text
---
lambda @0 (shape: "Person") {
  region {
    args: [%cs, %os]
    n2 = BoundsCheck(1) [%cs:arg] -> [%cs]
    n3 = ReadBytes(1) [%cs:n2] -> [v0, %cs]
    n4 = Const(0x7f) [] -> [v1]
    n5 = And [v0, v1] -> [v2]
    n6 = Const(0x80) [] -> [v3]
    n7 = And [v0, v3] -> [v4]
    n8 = Const(0x0) [] -> [v5]
    n9 = CmpNe [v4, v5] -> [v6]
    n33 = gamma [
      pred: v6
      in0: v2
      in1: %cs:n3
      in2: %os:arg
    ] {
      branch 0:
        region {
          args: [arg0, %cs, %os]
          n10 = Const(0x4) [] -> [v7]
          n11 = Const(0x0) [] -> [v8]
          results: [arg0, v7, arg0, v8, %cs:arg, %os:arg]
        }
      branch 1:
        region {
          args: [arg0, %cs, %os]
          n12 = Const(0x7) [] -> [v9]
          n13 = Const(0x4) [] -> [v10]
          n14 = Const(0x1) [] -> [v11]
          n180 = Const(0x7f) [] -> [v13]
          n181 = Const(0x7) [] -> [v17]
          n182 = Const(0x1) [] -> [v19]
          n183 = Const(0x80) [] -> [v21]
          n184 = Const(0x0) [] -> [v23]
          n185 = Const(0x0) [] -> [v25]
          n32 = theta [arg0, v9, v10, arg0, v11, %cs:arg, %os:arg] {
            region {
              args: [arg0, arg1, arg2, arg3, arg4, %cs, %os]
              n15 = BoundsCheck(1) [%cs:arg] -> [%cs]
              n16 = ReadBytes(1) [%cs:n15] -> [v12, %cs]
              n18 = And [v12, v13] -> [v14]
              n19 = Shl [v14, arg1] -> [v15]
              n20 = Or [arg0, v15] -> [v16]
              n22 = Add [arg1, v17] -> [v18]
              n24 = Sub [arg2, v19] -> [v20]
              n26 = And [v12, v21] -> [v22]
              n28 = CmpNe [v22, v23] -> [v24]
              n30 = CmpNe [v20, v25] -> [v26]
              n31 = And [v24, v26] -> [v27]
              results: [v27, v16, v18, v20, v14, v24, %cs:n16, %os:arg]
            }
          } -> [v28, v29, v30, v31, v32, %cs, %os]
          results: [v28, v30, v31, v32, %cs:n32, %os:n32]
        }
    } -> [v33, v34, v35, v36, %cs, %os]
    n34 = Const(0x0) [] -> [v37]
    n35 = CmpNe [v36, v37] -> [v38]
    n37 = gamma [
      pred: v38
      in0: %cs:n33
      in1: %os:n33
    ] {
      branch 0:
        region {
          args: [%cs, %os]
          results: [%cs:arg, %os:arg]
        }
      branch 1:
        region {
          args: [%cs, %os]
          n36 = ErrorExit(InvalidVarint) [%cs:arg] -> []
          results: [%cs:arg, %os:arg]
        }
    } -> [%cs, %os]
    n38 = Const(0x20) [] -> [v39]
    n39 = Shr [v33, v39] -> [v40]
    n40 = Const(0x0) [] -> [v41]
    n41 = CmpNe [v40, v41] -> [v42]
    n43 = gamma [
      pred: v42
      in0: %cs:n37
      in1: %os:n37
    ] {
      branch 0:
        region {
          args: [%cs, %os]
          results: [%cs:arg, %os:arg]
        }
      branch 1:
        region {
          args: [%cs, %os]
          n42 = ErrorExit(NumberOutOfRange) [%cs:arg] -> []
          results: [%cs:arg, %os:arg]
        }
    } -> [%cs, %os]
    n44 = CallIntrinsic(0x<ptr>, field_offset=0) [v33, %cs:n43, %os:n43] -> [%cs, %os]
    n45 = BoundsCheck(1) [%cs:n44] -> [%cs]
    n46 = ReadBytes(1) [%cs:n45] -> [v43, %cs]
    n47 = Const(0x7f) [] -> [v44]
    n48 = And [v43, v44] -> [v45]
    n49 = Const(0x80) [] -> [v46]
    n50 = And [v43, v46] -> [v47]
    n51 = Const(0x0) [] -> [v48]
    n52 = CmpNe [v47, v48] -> [v49]
    n76 = gamma [
      pred: v49
      in0: v45
      in1: %cs:n46
      in2: %os:n44
    ] {
      branch 0:
        region {
          args: [arg0, %cs, %os]
          n53 = Const(0x4) [] -> [v50]
          n54 = Const(0x0) [] -> [v51]
          results: [arg0, v50, arg0, v51, %cs:arg, %os:arg]
        }
      branch 1:
        region {
          args: [arg0, %cs, %os]
          n55 = Const(0x7) [] -> [v52]
          n56 = Const(0x4) [] -> [v53]
          n57 = Const(0x1) [] -> [v54]
          n186 = Const(0x7f) [] -> [v56]
          n187 = Const(0x7) [] -> [v60]
          n188 = Const(0x1) [] -> [v62]
          n189 = Const(0x80) [] -> [v64]
          n190 = Const(0x0) [] -> [v66]
          n191 = Const(0x0) [] -> [v68]
          n75 = theta [arg0, v52, v53, arg0, v54, %cs:arg, %os:arg] {
            region {
              args: [arg0, arg1, arg2, arg3, arg4, %cs, %os]
              n58 = BoundsCheck(1) [%cs:arg] -> [%cs]
              n59 = ReadBytes(1) [%cs:n58] -> [v55, %cs]
              n61 = And [v55, v56] -> [v57]
              n62 = Shl [v57, arg1] -> [v58]
              n63 = Or [arg0, v58] -> [v59]
              n65 = Add [arg1, v60] -> [v61]
              n67 = Sub [arg2, v62] -> [v63]
              n69 = And [v55, v64] -> [v65]
              n71 = CmpNe [v65, v66] -> [v67]
              n73 = CmpNe [v63, v68] -> [v69]
              n74 = And [v67, v69] -> [v70]
              results: [v70, v59, v61, v63, v57, v67, %cs:n59, %os:arg]
            }
          } -> [v71, v72, v73, v74, v75, %cs, %os]
          results: [v71, v73, v74, v75, %cs:n75, %os:n75]
        }
    } -> [v76, v77, v78, v79, %cs, %os]
    n77 = Const(0x0) [] -> [v80]
    n78 = CmpNe [v79, v80] -> [v81]
    n80 = gamma [
      pred: v81
      in0: %cs:n76
      in1: %os:n76
    ] {
      branch 0:
        region {
          args: [%cs, %os]
          results: [%cs:arg, %os:arg]
        }
      branch 1:
        region {
          args: [%cs, %os]
          n79 = ErrorExit(InvalidVarint) [%cs:arg] -> []
          results: [%cs:arg, %os:arg]
        }
    } -> [%cs, %os]
    n81 = Const(0x20) [] -> [v82]
    n82 = Shr [v76, v82] -> [v83]
    n83 = Const(0x0) [] -> [v84]
    n84 = CmpNe [v83, v84] -> [v85]
    n86 = gamma [
      pred: v85
      in0: %cs:n80
      in1: %os:n80
    ] {
      branch 0:
        region {
          args: [%cs, %os]
          results: [%cs:arg, %os:arg]
        }
      branch 1:
        region {
          args: [%cs, %os]
          n85 = ErrorExit(NumberOutOfRange) [%cs:arg] -> []
          results: [%cs:arg, %os:arg]
        }
    } -> [%cs, %os]
    n87 = WriteToField(offset=56, W4) [v76, %os:n86] -> [%os]
    n88 = SaveOutPtr [%os:n87] -> [v86, %os]
    n89 = Const(0x18) [] -> [v87]
    n90 = Add [v86, v87] -> [v88]
    n91 = SetOutPtr [v88, %os:n88] -> [%os]
    n92 = apply @1 [%cs:n86, %os:n91] -> [%cs, %os]
    n93 = SetOutPtr [v86, %os:n92] -> [%os]
    results: [%cs:n92, %os:n93]
  }
}
